@@ -38,11 +38,12 @@
         <assertj.version>3.15.0</assertj.version>
         <lombok.version>1.18.12</lombok.version>
         <tiles-maven-plugin.version>2.16</tiles-maven-plugin.version>
-        <kemitix-maven-tiles.version>1.2.0</kemitix-maven-tiles.version>
+        <kemitix-maven-tiles.version>2.4.1</kemitix-maven-tiles.version>
         <digraph-dependency.basePackage>net.kemitix.mon</digraph-dependency.basePackage>
         <kemitix-checkstyle.version>5.0.0</kemitix-checkstyle.version>
         <pitest-maven-plugin.version>1.5.0</pitest-maven-plugin.version>
         <pitest-junit5-plugin.version>0.12</pitest-junit5-plugin.version>
+        <spotbugs.version>4.0.1</spotbugs.version>
     </properties>
 
     <dependencies>
@@ -74,6 +75,12 @@
             <artifactId>assertj-core</artifactId>
             <version>${assertj.version}</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.github.spotbugs</groupId>
+            <artifactId>spotbugs-annotations</artifactId>
+            <version>${spotbugs.version}</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
